syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";
import "cosmos_proto/cosmos.proto";

message OwnedDomain {
  string name = 1;
  string parent = 2;
}

message DomainOwnership {
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated OwnedDomain domains = 2; 
}

